concourse-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: concourse-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - concourse.netdevopsx.com
    secretName: concourse-tls
  rules:
  - host: concourse.netdevopsx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: concourse-web
          servicePort: 8080
